<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayout">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/trip"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:id="@+id/boardingStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boarding_station_name"
                android:textSize="10dp"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/imageView"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/boardingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boarding_time"
                android:textSize="5dp"
                android:textStyle="italic"
                android:layout_toEndOf="@+id/imageView"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                />
            <TextView
                android:id="@+id/departureStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departure_station_name"
                android:textSize="10dp"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/imageView"
                android:layout_marginTop="45dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/departureTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departure_time"
                android:textSize="5dp"
                android:textStyle="italic"
                android:layout_toEndOf="@+id/imageView"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="60dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                android:textSize="5dp"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:gravity="right"
                />
            <TextView
                android:id="@+id/tripCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/travel_amount"
                android:textSize="25dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/travelTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="5dp"
                android:textStyle="italic"
                android:layout_marginRight="10dp"
                android:layout_marginTop="60dp"
                android:text="@string/travel_time"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>