<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/user_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/user"/>

                        <TextView
                            android:id="@+id/user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_name"
                            android:textSize="30dp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold|italic"
                            android:layout_toRightOf="@+id/user_image"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="10dp"
                            />
                        <TextView
                            android:id="@+id/user_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_address"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="italic"
                            android:textSize="15dp"
                            android:layout_toRightOf="@+id/user_image"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="60dp"
                            />
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="25dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp">

                            <TextView
                                android:id="@+id/txt_user_rides"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/user_rides"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/user_rides"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:text="@string/default_value"
                                android:textColor="@color/colorPrimary"
                                android:layout_marginTop="25dp"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:textSize="20dp" />

                            <TextView
                                android:id="@+id/txt_free_rides"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_marginLeft="90dp"
                                android:layout_marginTop="0dp"
                                android:layout_toRightOf="@+id/txt_user_rides"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/user_free_rides"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/free_rides"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="62dp"
                                android:layout_marginTop="25dp"
                                android:layout_toRightOf="@+id/user_rides"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/default_value"
                                android:textColor="@color/colorPrimary"
                                android:textSize="20dp" />

                            <TextView
                                android:id="@+id/txt_credits"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_marginLeft="76dp"
                                android:layout_toRightOf="@+id/txt_free_rides"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/user_credits"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/credits"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="80dp"
                                android:layout_marginTop="25dp"
                                android:layout_toRightOf="@+id/free_rides"
                                android:paddingLeft="10dp"
                                android:text="@string/default_value"
                                android:textColor="@color/colorPrimary"
                                android:textSize="20dp" />
                        </RelativeLayout>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/past_trips"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    android:textStyle="italic"
                    />
                <TextView
                    android:id="@+id/see_all_trips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all_trips"
                    android:gravity="right"
                    />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                ></androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>